Updated project file to include details for NuGet package.

--- a/PersonalisationGroups/App_Plugins/PersonalisationGroups/Criteria/DayOfWeek/definition.editor.html
+++ b/PersonalisationGroups/App_Plugins/PersonalisationGroups/Criteria/DayOfWeek/definition.editor.html
@@ -2,7 +2,7 @@
 
     <div class="umb-panel-body no-header with-footer compact" style="padding-left: 16px; padding-right: 16px">
 
-        <p>Please select the months for which this group will be valid:</p>
+        <p>Please select the days for which this group will be valid:</p>
 
         <umb-pane>
             <table>
